Fix navigation partly hidden on mobile

--- a/gnNews/src/styles/navigation/Navigation.scss
+++ b/gnNews/src/styles/navigation/Navigation.scss
@@ -13,7 +13,7 @@ nav {
   nav {
     position: fixed;
 
-    transform: translateX(-100%);
+    transform: translateX(-105%);
     transition: transform 0.3s;
   }
 
